[gd_scene load_steps=10 format=3 uid="uid://275ibvia1q42"]

[ext_resource type="Script" uid="uid://cnkygc5bj5ips" path="res://source/screens/principal_character/prin_character.gd" id="1_211qq"]
[ext_resource type="SpriteFrames" uid="uid://2y6btlsb3qil" path="res://resources/assets/principalcharacter/principalcharacter_spriteframes.tres" id="2_pgort"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_27g3f"]
size = Vector2(10, 6)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_u074o"]
radius = 5.0
height = 14.0

[sub_resource type="Gradient" id="Gradient_u074o"]
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_v7b21"]
gradient = SubResource("Gradient_u074o")
width = 80
height = 80
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.957265, 0.641026)

[sub_resource type="Animation" id="Animation_v7b21"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_u074o"]
resource_name = "hurtAnimation"
length = 0.4
loop_mode = 1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.890196, 0, 0, 0.717647), Color(0.999984, 0.840034, 0.813066, 0.717647)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_du4jm"]
_data = {
&"RESET": SubResource("Animation_v7b21"),
&"hurtAnimation": SubResource("Animation_u074o")
}

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 7
script = ExtResource("1_211qq")

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="."]
clip_children = 2
texture_filter = 1
sprite_frames = ExtResource("2_pgort")
animation = &"idle_down"
autoplay = "idle_down"
offset = Vector2(0, -8)

[node name="ColorRect" type="ColorRect" parent="AnimatedSprite"]
offset_left = -20.0
offset_top = -26.0
offset_right = 20.0
offset_bottom = 14.0
color = Color(1, 1, 1, 0)

[node name="CollisionArea" type="CollisionShape2D" parent="."]
position = Vector2(0, -3)
shape = SubResource("RectangleShape2D_27g3f")

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 6

[node name="CollisionArea" type="CollisionShape2D" parent="HitBox"]
position = Vector2(0, -7)
scale = Vector2(1.1, 1.1)
shape = SubResource("CapsuleShape2D_u074o")

[node name="Lamp" type="PointLight2D" parent="."]
position = Vector2(0, -6)
shadow_enabled = true
shadow_filter = 1
texture = SubResource("GradientTexture2D_v7b21")
texture_scale = 2.0

[node name="Effects" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_du4jm")
}

[node name="HurtTimer" type="Timer" parent="."]

[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="area_exited" from="HitBox" to="." method="_on_hit_box_area_exited"]
